--- a/产品概述.md
+++ b/产品概述.md
@@ -1,4 +1,4 @@
-短视频 SDK 是腾讯云视立方产品家族的子产品之一，提供APP端的短视频制作、播放及分享功能。
+短视频 SDK 是腾讯云视立方产品家族的子产品之一，提供APP端的短视频制作（采集、剪辑、拼接、特效等）、播放及分享等功能。
 ## 基本支持
 * 功能支持：短视频制作（采集、剪辑、拼接、特效等）、分享、播放等功能，详情参见 [产品功能]。
 * 平台支持：iOS、Android
@@ -21,6 +21,6 @@
 ![image](https://user-images.githubusercontent.com/88317062/182562782-848e8062-c7c4-4614-8b5a-c157e4056d0d.png)
 
 ## 产品家族
-如果除了短视频外，您还有直播推流、音视频通话、高级美颜等其他终端需求，可参见 [腾讯云视立方](https://cloud.tencent.com/document/product/1449/56978) 产品家族的其他子产品。
+如果除了短视频外，您还有[直播推流](https://cloud.tencent.com/document/product/454/7873)、[音视频通话](https://cloud.tencent.com/document/product/647/32689)、[美颜特效](https://cloud.tencent.com/document/product/616)等其他终端需求，可参见 [腾讯云视立方](https://cloud.tencent.com/document/product/1449/56978) 产品家族的其他子产品。
 ![](https://qcloudimg.tencent-cloud.cn/raw/fb9148de43ab9f833a69d88d9e958d35.jpg)
 
