--- a/产品功能.md
+++ b/产品功能.md
@@ -1,5 +1,5 @@
-短视频SDK提供短视频制作、播放、分享等功能，支持iOS和Android端。
-（https://cloud.tencent.com/document/product/584/72408中第一个和第二个动图并排放）
+短视频SDK提供短视频制作（采集、剪辑、拼接、特效等）、播放、分享等功能，支持iOS和Android端。
+https://cloud.tencent.com/document/product/584/72408 中第一个和第二个动图并排放
 
 功能详情如下：
 <table>
