--- a/产品概述.md
+++ b/产品概述.md
@@ -1,6 +1,6 @@
 短视频 SDK 是腾讯云视立方产品家族的子产品之一，提供APP端的短视频制作（采集、剪辑、拼接、特效等）、播放及分享等功能。
 ## 基本支持
-* 功能支持：短视频制作（采集、剪辑、拼接、特效等）、分享、播放等功能，详情参见 [产品功能]。
+* 功能支持：短视频制作（采集、剪辑、拼接、特效等）、分享、播放等功能，详情参见 [产品功能](https://cloud.tencent.com/document/product/584/72408)。
 * 平台支持：iOS、Android
 * 云端支持：使用短视频SDK需配合 [腾讯云点播](https://cloud.tencent.com/product/vod)  使用，以提供上传、存储、转码、分发、内容审核等完整云端能力。
 ![image](https://user-images.githubusercontent.com/88317062/182560532-c82d3ff6-fdfa-4891-bbac-136ab0503453.png)
@@ -8,13 +8,13 @@
 
 ## 产品优势
 ### 功能完整
-提供市场主流短视频APP所需的所有功能，包含视频采集、剪辑、拼接、特效、美颜、滤镜、绿幕抠像、动态挂件、发布和播放等能力。
+提供市场主流短视频APP所需的所有功能，包含视频采集、剪辑、拼接、特效、美颜、滤镜、绿幕抠像、动态挂件、发布和播放等能力，完整功能参见 [产品功能](https://cloud.tencent.com/document/product/584/72408)。
 
 ### 接入简易
-提供具备完整能力的Demo源码，包含从云点播配置到SDK功能使用的一站式接入服务，简单更改参数，即可快速打造一款属于自己的“抖音”、“快手”。
+提供具备完整能力的Demo源码，包含从云点播配置到SDK功能使用的一站式接入服务，简单更改参数，即可快速打造一款属于自己的“抖音”、“快手”，详情参见 [Demo体验](https://cloud.tencent.com/document/product/584/9457)。
 
 ### 合规审核
-基于腾讯云点播，提供视频合规内容审核能力，帮助企业匹配市场监管部门需求。
+基于腾讯云点播，提供视频合规内容审核能力，并向开发者提供视频审核结果，便于进行视频合规管理。详情参见[视频审核](https://cloud.tencent.com/document/product/584/15536)。
 
 ## 应用场景
 支持各种移动端APP的短视频制作、播放、分享等场景。
