--- a/产品概述.md
+++ b/产品概述.md
@@ -14,7 +14,10 @@
 提供具备完整能力的Demo源码，包含从云点播配置到SDK功能使用的一站式接入服务，简单更改参数，即可快速打造一款属于自己的“抖音”、“快手”，详情参见 [Demo体验](https://cloud.tencent.com/document/product/584/9457)。
 
 ### 合规审核
-基于腾讯云点播，提供视频合规内容审核能力，并向开发者提供视频审核结果，便于进行视频合规管理。详情参见[视频审核](https://cloud.tencent.com/document/product/584/15536)。
+基于腾讯云点播，提供视频合规内容审核能力，并反馈视频审核结果，便于进行视频合规管理，详情参见[视频审核](https://cloud.tencent.com/document/product/584/15536)。
+
+### 云端配合
+结合腾讯云点播，提供从作品上传、存储、快速转码、到视频鉴黄和分发的一站式云端接入服务，保证用户的作品第一时间被观看、分享。
 
 ## 应用场景
 支持各种移动端APP的短视频制作、播放、分享等场景。
