--- a/产品概述.md
+++ b/产品概述.md
@@ -20,7 +20,7 @@
 结合腾讯云点播，提供从作品上传、存储、快速转码、到视频鉴黄和分发的一站式云端接入服务，保证用户的作品第一时间被观看、分享。
 
 ## 应用场景
-支持各种移动端APP的短视频制作、播放、分享等场景。
+支持各种移动端APP的短视频制作（采集、剪辑、拼接、特效等）、播放、分享等场景。
 ![image](https://user-images.githubusercontent.com/88317062/182562782-848e8062-c7c4-4614-8b5a-c157e4056d0d.png)
 
 ## 产品家族
