--- a/产品概述.md
+++ b/产品概述.md
@@ -1,5 +1,5 @@
 短视频 SDK 是腾讯云视立方产品家族的子产品之一，提供APP端的短视频制作（采集、剪辑、拼接、特效等）、播放及分享等功能。
-## 基本支持
+## 基础功能
 * 功能支持：短视频制作（采集、剪辑、拼接、特效等）、分享、播放等功能，详情参见 [产品功能](https://cloud.tencent.com/document/product/584/72408)。
 * 平台支持：iOS、Android
 * 云端支持：使用短视频SDK需配合 [腾讯云点播](https://cloud.tencent.com/product/vod)  使用，以提供上传、存储、转码、分发、内容审核等完整云端能力。
